--- a/app/templates/user_form.html
+++ b/app/templates/user_form.html
@@ -5,13 +5,21 @@
     <title>AIEM's Test Form</title>
 </head>
 <body>
-    <form action="/submit-user-info" method="post">
+    <form action="/user/create-user" method="POST">
+
         <label for="us_name"> Name: </label> <br/>
         <input type="text" id="us_name" name="us_name"><br/>
+
         <label for="us_username">Username: </label> <br/>
         <input type="text" id="us_username" name="us_username"><br/>
+
         <label for="us_password">Password: </label> <br/>
         <input type="password" id="us_password" name="us_password"><br/>
+
+        <label for="ut_name">Type Name: </label><br/>
+        <input type="text" id="ut_name" name="ut_name"><br/>
+
         <input type="submit" value="submit"><br/>
+
     </form>
 </body>
