Unlinked a route from the home.html file

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,7 @@
         <p class="center">Armando, Ignacio, Emma, Moises</p>
         <nav class="stroke">
             <ul>
-                <li><a href="/user/create-user">User Creation</a></li>
+                <li><a href="#">User Creation</a></li>
                 <li><a href="#">View available rooms</a></li>
                 <li><a href="#">Meeting Creation</a></li>
             </ul>
